--- a/apps/teachers/package.json
+++ b/apps/teachers/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "docs",
+  "name": "teachers",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^2.29.0",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "tailwindcss": "^3.1.8",
     "ui": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/node": "^17.0.12",
+    "@types/react": "18.0.17",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "next-transpile-modules": "9.0.0",
     "tsconfig": "*",
-    "@types/node": "^17.0.12",
-    "@types/react": "18.0.17",
     "typescript": "^4.5.3"
   }
 }
