--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
-  "packageManager": "npm@8.11.0"
+  "packageManager": "npm@8.11.0",
+  "dependencies": {
+    "react-query": "^0.0.0"
+  }
 }
