--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,10 +10,15 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.11",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "react": "^18.2.0",
     "tsconfig": "*",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "react-hook-form": "^7.36.0",
+    "react-query": "^3.39.2"
   }
 }
